--- a/app/connect.yaml
+++ b/app/connect.yaml
@@ -22,7 +22,7 @@ pipeline:
         runner:
           context_size: 0
           batch_size: 0
-        server_address: http://localhost:11434
+        server_address: http://192.168.0.185:11434
 
 output:
   label: ""
