--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ name: redpanda-enterprise
 networks:
   redpanda_network:
     driver: bridge
+
 volumes:
   redpanda: null
-  etc_wireguard:
-  ollama-local:
-
+  etc_wireguard: null
+  ollama-local: null
 
 services:
   redpanda:
@@ -16,17 +16,10 @@ services:
       - --smp 1
       - --overprovisioned
       - --kafka-addr internal://0.0.0.0:9092,external://0.0.0.0:19092
-      # Address the broker advertises to clients that connect to the Kafka API.
-      # Use the internal addresses to connect to the Redpanda brokers
-      # from inside the same Docker network.
-      # Use the external addresses to connect to the Redpanda brokers
-      # from outside the Docker network.
       - --advertise-kafka-addr internal://redpanda:9092,external://localhost:19092
       - --pandaproxy-addr internal://0.0.0.0:8082,external://0.0.0.0:18082
-      # Address the broker advertises to clients that connect to the HTTP Proxy.
       - --advertise-pandaproxy-addr internal://redpanda:8082,external://localhost:18082
       - --schema-registry-addr internal://0.0.0.0:8081,external://0.0.0.0:18081
-      # Redpanda brokers use the RPC API to communicate with each other internally.
       - --rpc-addr redpanda:33145
       - --advertise-rpc-addr redpanda:33145
       - --mode dev-container
@@ -39,31 +32,26 @@ services:
       - redpanda:/var/lib/redpanda/data
     networks:
       - redpanda_network
+
   redpandarpk:
+    image: docker.redpanda.com/redpandadata/redpanda:v23.2.21
     command:
       - cluster
       - license
       - set
       - --path
-      # this is the default location in which rpk searches for the redpanda.license file.
-      # if you mount the license key file to a different location, update this path.
       - /etc/redpanda/redpanda.license
-      # rpk connects to the admin API of one broker to set the license key for the whole cluster.
       - --api-urls redpanda:9644
-    image: docker.redpanda.com/redpandadata/redpanda:v23.2.21
-    # mount the local directory that contains your license key to the container.
-    # give Redpanda read and write access to the license.
     volumes:
       - ./license:/etc/redpanda:rw
     networks:
       - redpanda_network
     depends_on:
       - redpanda
+
   console:
     container_name: redpanda-console
     image: docker.redpanda.com/redpandadata/console:v2.7.2
-    # mount the local directory that contains your license key to the container.
-    # give Redpanda Console read access to the license.
     volumes:
       - ./license:/etc/redpanda:ro
     networks:
@@ -122,7 +110,8 @@ services:
   python-app:
     container_name: python-app
     build: ./app/
-    network_mode: "host"
+    networks:
+      - redpanda_network
     environment:
       - PATH=/root/.local/bin:$PATH
     command: >
@@ -131,9 +120,6 @@ services:
       pip install -r /app/requirements.txt &&
       echo 'Environment is ready!' &&
       tail -f /dev/null"
-    networks:
-      - redpanda_network
-
 
   smtp4dev:
     container_name: smtp4dev
@@ -144,22 +130,14 @@ services:
       - '25:25'
       - '143:143'
     volumes:
-        - ./smtp4dev:/smtp4dev
+      - ./smtp4dev:/smtp4dev
     networks:
       - redpanda_network
 
-  
-
   wg-easy:
     environment:
-      # Change Language:
-      # (Supports: en, ua, ru, tr, no, pl, fr, de, ca, es, ko, vi, nl, is, pt, chs, cht, it, th, hi, ja, si)
       - LANG=en
-      # ⚠️ Required:
-      # Change this to your host's public address
       - WG_HOST=raspberrypi.local
-
-
     image: ghcr.io/wg-easy/wg-easy
     container_name: wg-easy
     volumes:
@@ -171,13 +149,11 @@ services:
     cap_add:
       - NET_ADMIN
       - SYS_MODULE
-      # - NET_RAW # ⚠️ Uncomment if using Podman
     sysctls:
       - net.ipv4.ip_forward=1
       - net.ipv4.conf.all.src_valid_mark=1
     networks:
       - redpanda_network
-
 
   ollama:
     image: ollama/ollama
@@ -188,4 +164,10 @@ services:
       - ollama-local:/root/.ollama
     networks:
       - redpanda_network
-
+  ## Additional service
+  connect:
+    image: docker.redpanda.com/redpandadata/connect
+    networks:
+      - redpanda_network
+    depends_on:
+      - redpanda
