--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -28,3 +28,10 @@ six==1.16.0
 typing_extensions==4.12.2
 urllib3==2.2.3
 Werkzeug==3.0.4
+mkdocs==1.6.0
+mkdocs-get-deps==0.2.0
+mkdocs-glightbox==0.4.0
+mkdocs-material==9.5.33
+mkdocs-material-extensions==1.3.1
+mkdocs-pdf==0.1.2
+mdx-gh-links==0.4
